# connectcare

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  run_e2e_tests.sh  test_webhook.sh
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  rust.yml  trivy.yml
config/: config.example.json
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  secret.rs
src/pipeline/: event.rs  executor.rs  mod.rs
src/pipeline/processors/: filter.rs  mapper.rs  mod.rs
src/pipeline/sinks/: database.rs  mod.rs
src/server/: mod.rs  routes.rs
src/sources/: mod.rs
src/sources/jira/: config.rs  events.rs  handler.rs  mod.rs  tests.rs
src/sources/webhook/: hmac.rs  mod.rs  types.rs
tests/: integration_tests.rs
tests/e2e/: README.md  config.test.json  run_tests.sh
