[package]
name = "connectcare"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# CEL expression evaluation
cel-interpreter = "0.9"

# Template engine
handlebars = "5"

# MongoDB
mongodb = "3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
